--- a/hodnoceni_kvality_sluzeb.lyx
+++ b/hodnoceni_kvality_sluzeb.lyx
@@ -317,14 +317,10 @@ Použité nástroje
 \begin_layout Standard
 Při zpracování této práce byly primárně použity dva nástroje: KNIME Analytics
  Platform a programovací jazyk Python.
- Pro dosažení stejných výsledků ale použít jakékoliv jiné, analogické nástroje.
- Tato práce proto neposkytne podrobné návody pro práci s jednotlivými nástroji,
- ale zaměří se na jednolivé úlohy, které byly řešeny.
-\end_layout
-
-\begin_layout Standard
-Přesto, jsou oba nástroje představeny aby bylo zřejmé, jak právě tyto nástroje
- řešily konrétní úlohy a popřípadě, jak zvolit jiný, vhodný nástroj.
+ Pro dosažení stejných výsledků lze ale použít jakékoliv jiné, analogické
+ nástroje.
+ Oba nástroje jsou představeny aby bylo zřejmé, jak právě tyto nástroje
+ řešily konrétní úlohy a popřípadě, podle čeho volit jiný, vhodný nástroj.
 \end_layout
 
 \begin_layout Subsection
@@ -347,20 +343,10 @@ work flow.
 roura
 \emph default
 .
- Touto rourou pak prochází data, přičemž každý uzel nad těmito daty provádí
- určité operace
-\begin_inset Foot
-status open
-
-\begin_layout Plain Layout
-Stejný koncept se využívá například v operačních systémech Linux, kdy výstupy
- z programu lze posílat přímo do vstupů jiného programu.
-\end_layout
-
-\end_inset
-
-.
- 
+ Rourou pak prochází data, přičemž každý uzel nad těmito daty provádí určité
+ operace.
+ Tento princip práce je podobný funkčnímu programování, kdy každá funkce
+ (uzel) přijímá vstupy, provádí nad nimi operace a vrací výstupy.
 \end_layout
 
 \begin_layout Standard
@@ -407,7 +393,14 @@ Výhodou KNIME AP je, že i při neznalosti postupů práce s tím to programem,
  probíhá.
  Části tohoto schématu budou v následujících částech této práce uvedeny
  pro ilustraci.
- Níže je uveden popis jednoho uzlu programu KNIME AP.
+ Na Obrázku 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:popis-uzlu"
+
+\end_inset
+
+ je uveden příklad uzlu a jeho popis.
 \end_layout
 
 \begin_layout Standard
@@ -434,6 +427,13 @@ status open
 
 \begin_layout Plain Layout
 Popis uzlu
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:popis-uzlu"
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -477,7 +477,7 @@ Vstup
 Výstup
 \series default
  Každý uzel může ale nemusí mít jeden či více vstupů.
- Data z jednoho výstupu lze směřovat zároveň do několika vstupů jiného uzlu.
+ Data z jednoho výstupu lze směřovat zároveň do několika vstupů jiných uzlů.
 \end_layout
 
 \begin_layout Labeling
@@ -507,29 +507,53 @@ uzlu
 \end_layout
 
 \begin_layout Standard
-V našem work flow můžeme spouštět jednotlivé uzly, skupinu označených uzlů,
- nebo všechny uzly.
+Ve workflow lze spouštět jednotlivé uzly, skupinu označených uzlů, nebo
+ všechny uzly.
+ Data jsou mezi uzly přenášeny v tabulkách.
  Při spuštění, příjme uzel vstupní data a provede určenou operaci.
- U uzlu, který dokončil provádění operace můžeme zobrazit jeho výstupní
- data.
- Díky tomu, můžeme sledovat, co se s daty dějě na při každém kroku.
+ U uzlu, který dokončil provádění operace lze zobrazit jeho výstupní data.
+ Díky tomu, lze sledovat, co se s daty dějě na při každém kroku.
 \end_layout
 
 \begin_layout Standard
 Pokud je spuštěno několik propojených uzlů najednou, po skončení operace
  v jednom uzlu, jsou výstupní data ihned poslána do vstupu dalšího uzlu,
- který zahájí další operaci atd.
- Dokud neproběhnou všechny spuštěné uzly.
+ který zahájí další operaci atd., dokud neproběhnou všechny spuštěné uzly.
 \end_layout
 
 \begin_layout Standard
-Pokud se work flow větví, obě větve při spuštění budou probíhat paralelně.
+Pokud se workflow větví, obě větve při spuštění budou probíhat paralelně.
 \end_layout
 
 \begin_layout Standard
 Jednotlivé uzly lze konfigurovat (podle jejich specifikace).
  Pro každý základní uzel lze přímo v programu zobrazit dokumentaci, která
  popisuje funkci uzlu, jeho vstupy, výstupy a možná nastavení.
+\end_layout
+
+\begin_layout Standard
+Kromě základní konfigurace, mají všechny uzly přístup k tzv.
+ 
+\emph on
+flow variables
+\emph default
+, což jsou globální proměnné dostupné všem uzlům.
+\end_layout
+
+\begin_layout Paragraph
+Meta-uzly
+\end_layout
+
+\begin_layout Standard
+Speciálním případem uzlu je tzv.
+ meta-uzel, které jsou vytvářeny uživatelem.
+ Stejně jako obyčejné uzly přijímají vstupy a posílají dál výstupy.
+ Hlavním rozdílem je, že v sami nemají žádnou funkci a pouze v sobě obsahují
+ neomezené množství jiných uzlů.
+ Jejich účel je tedy podobný jako u funkcí v programování - rozdělují workflow
+ na samostatné celky.
+ Tím je workflow přehlednější a jednotlivé meta-uzly lze jednodušeji kopírovat
+ a znovu používat.
 \end_layout
 
 \begin_layout Subsubsection
@@ -689,6 +713,15 @@ souboru Tento uzel vytvoří PSD soubor ve kterém bude tabulka s výstupními
  daty
 \end_layout
 
+\begin_layout Description
+Anotace
+\begin_inset space ~
+\end_inset
+
+workflow Nemá žádný vliv na průběh workflow, slouží pouze k vizuálnímu oddělení
+ jednotlivých částí.
+\end_layout
+
 \begin_layout Standard
 \begin_inset Float figure
 placement h
@@ -733,7 +766,7 @@ Ručně vytvořená tabulka
 
 \begin_layout Standard
 Výsledek můžeme sledovat ve vzniklém PDF souboru, v databázi, nebo přímo
- v programu, zobrazením výstupních dat uzlu Group By (viz Obrázek 
+ v programu, zobrazením výstupní tabulky uzlu Group By (viz Obrázek 
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "fig:Výstupní-tabulka"
